--- a/src/main/resources/templates/views/index_a.html
+++ b/src/main/resources/templates/views/index_a.html
@@ -413,7 +413,7 @@
     <div class="clear"></div>
     <footer class="site-footer wow fadeInUp" data-wow-delay="0.3s" role="contentinfo">
         <div class="site-info">
-            <p style="text-align: center;">Copyright © ZAY博客</p>
+            <p style="text-align: center;">Copyright © ZAY博客<span style="margin-left: 1rem;">ICP证：<a href="http://www.beian.miit.gov.cn">浙ICP备18040314号</a></span></p>
         </div>
     </footer>
 </body>
